Botões de etapas como navbar bottom

--- a/projeto/cliente/templates/cliente_form.html
+++ b/projeto/cliente/templates/cliente_form.html
@@ -219,13 +219,16 @@
             </form>
         </div>
     </div>
-    
-    <div >
+    <nav class="navbar navbar-expand-md navbar bg fixed-bottom">        
         <nav id="menu">
             <button class="button button1" id="tela1">Cadastro Pessoal</button>
             <button class="button button1" id="tela2">Dados do Local de Trabalho </button>
             <button class="button button1" id="tela3">Dados Bancários</button>
         </nav>
+    </nav>
+    
+    <div >
+        
       
         <script>
       
@@ -324,7 +327,9 @@
         };
     
         </script>
+
+
  {% endblock content %}
 
- {% block footer %} {% endblock footer %}
+ 
 
