--- a/projeto/core/templates/base.html
+++ b/projeto/core/templates/base.html
@@ -12,7 +12,7 @@
 
     <!-- Bootstrap CSS -->
     {% comment %} <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"> {% endcomment %}
-    <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}"> 
+    <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.css' %}"> 
     <!-- jQuery UI CSS -->
     {% comment %} <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"> {% endcomment %}
     <!-- Font-awesome -->
@@ -47,7 +47,7 @@
   <script src="{% static 'bootstrap/js/jquery-3.3.1.min.js' %}"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-  {% comment %} <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">  {% endcomment %}
+  {% comment %} <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.css' %}">  {% endcomment %}
   
   {% comment %} <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script> {% endcomment %}
   <script type="text/javascript" src="{% static 'bootstrap/js/masks.js' %}"></script>
