Algunas ajustes feitos nos arquivos do base.html em relação a bootstrap

--- a/projeto/core/templates/base.html
+++ b/projeto/core/templates/base.html
@@ -11,14 +11,19 @@
     <title>ESCTOP - SISTEMA</title>    
 
     <!-- Bootstrap CSS -->
-    {% comment %} <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"> {% endcomment %}
+
+    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">  -->
+    
     <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.css' %}"> 
     <!-- jQuery UI CSS -->
     {% comment %} <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"> {% endcomment %}
     <!-- Font-awesome -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     
-    <style>
+
+    <!-- MEUS CSS -->
+    {% block css %}{% endblock css %}
+     <style>
       body{
         margin-top: 60px;
       }
@@ -27,10 +32,19 @@
       }
       .no{
           color: red;
+      }   
+      label.required:after{
+          content: "*";
+          color: red;
       }
+      label {
+        font-weight: bold;
+      }     
+    } 
     </style>
+    <!-- MEUS CSS -->
 
-    {% block css %} {% endblock css %}
+    
 
   </head>
   <body>
