--- a/projeto/cliente/templates/cliente_form.html
+++ b/projeto/cliente/templates/cliente_form.html
@@ -2,28 +2,6 @@
 
 {% load widget_tweaks %}
 
-{% block css %}
-    <style>
-        label {
-            font-weight: bold;
-        }
-    </style>
-    <style>
-        label.required:after{
-            content: "*";
-            color: red;
-        }
-    </style>
-
-    <style>
-        label.error:after{
-            content: " Campo já existente";
-            color: rgb(0, 255, 55);
-           
-        }
-    </style>
-{% endblock css %}
-
 {% block js %}{% endblock js %}
 
 {% block content %}
@@ -52,7 +30,8 @@
     .button2 {border-radius: 4px;}
     .button3 {border-radius: 8px;}
     .button4 {border-radius: 12px;}
-    .button5 {border-radius: 50%;}
+    .button5 {border-radius: 50%;}  
+    
 </style>
 
    <!-- https://www.schoolofnet.com/forum/topico/como-enviar-a-mensagem-de-sucesso-ou-erro-para-o-formulario-8495 -->
@@ -68,7 +47,7 @@
                 <div class="col-sm-5">                    
                     <div class="form-group" >                
                         <label for="" class="required" >{{form.nome.label}} </label>        
-                        {% render_field form.nome class="form-control" %}
+                        {% render_field form.nome class="form-control"  %}
                     </div>
                 </div>
                 <div class="col-sm-2">                    
@@ -219,8 +198,10 @@
             </form>
         </div>
     </div>
-    <nav class="navbar navbar-expand-md navbar bg fixed-bottom">        
-        <nav id="menu">
+
+    <!-- NAVBAR DE BOTÕES DE ETAPAS -->
+    <nav class="navbar navbar-expand-md navbar bg fixed-bottom" >        
+        <nav id="menu" >
             <button class="button button1" id="tela1">Cadastro Pessoal</button>
             <button class="button button1" id="tela2">Dados do Local de Trabalho </button>
             <button class="button button1" id="tela3">Dados Bancários</button>
@@ -228,30 +209,26 @@
     </nav>
     
     <div >
-        
-      
         <script>
-      
-        function tableshowhide(a,b,c){
-                len = menu.childElementCount;
-                closeall();
-                for(i=0; i<len; i++){
-                menu.children[i].onclick=function(){
+            function tableshowhide(a,b,c){
+                    len = menu.childElementCount;
                     closeall();
-                    all.children[this.id].style.display="block";
+                    for(i=0; i<len; i++){
+                    menu.children[i].onclick=function(){
+                        closeall();
+                        all.children[this.id].style.display="block";
+                    }
                 }
-            }
-      
-            function closeall(){
-                for(i=0; i<all.childElementCount;i++){
-                    all.children[i].style.display="none";
+            
+                function closeall(){
+                    for(i=0; i<all.childElementCount;i++){
+                        all.children[i].style.display="none";
+                    }
                 }
+            
+                menu.children[c].click();
             }
-      
-            menu.children[c].click();
-        }
-        tableshowhide("menu", "all", "tela1");
-      
+            tableshowhide("menu", "all", "tela1");      
         </script>
     </div>
     
