--- a/projeto/core/templates/base.html
+++ b/projeto/core/templates/base.html
@@ -11,12 +11,12 @@
     <title>ESCTOP - SISTEMA</title>    
 
     <!-- Bootstrap CSS -->
-
     <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">  -->
-    
     <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.css' %}"> 
+    
     <!-- jQuery UI CSS -->
     {% comment %} <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"> {% endcomment %}
+   
     <!-- Font-awesome -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     
@@ -39,7 +39,9 @@
       }
       label {
         font-weight: bold;
+        margin-bottom: 0px;
       }     
+      
     } 
     </style>
     <!-- MEUS CSS -->
@@ -52,7 +54,7 @@
   {% include "includes/nav.html" %}
 
   <div class="container">
-      {% block content %}{% endblock content %}
+    {% block content %}{% endblock content %}
   </div>
     
   <!-- Bootstrap 4 -->
