--- a/static/bootstrap/css/bootstrap.css
+++ b/static/bootstrap/css/bootstrap.css
@@ -220,7 +220,7 @@ th {
 
 label {
   display: inline-block;
-  margin-bottom: 0.5rem;  
+  margin-bottom: 0.5rem;
 }
 
 button {
@@ -8025,8 +8025,9 @@ button.bg-dark:focus {
   z-index: 1030;
 }
 
+/* ALTERAÇÕES FORA DO PADRÃO */
 .fixed-bottom {
-  position: fixed;
+  position: fixed;  
   right: 0;
   bottom: 0;
   left: 0;
