--- a/projeto/core/templates/includes/nav.html
+++ b/projeto/core/templates/includes/nav.html
@@ -1,45 +1,36 @@
 <!-- https://github.com/JTruax/bootstrap-starter-template/blob/master/template/start.html -->
 
 <!-- <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-  <a class="navbar-brand" href="#">Estoque</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-  </button>
+    <a class="navbar-brand" href="#">ESCTOP</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
 
-  <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-      <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-              <a class="nav-link" href="{% url 'core:index' %}">Home <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-              <a class="nav-link" href="{% url 'cliente:cliente_list' %}">Clientes</a>
-          </li>
-          <li class="nav-item">
-              <a class="nav-link" href="{% url 'emprestimo:emprestimo_list' %}">Emprestimos</a>
-          </li>
-          <li class="nav-item">
-              <a class="nav-link" href="{% url 'produto:produto_list' %}">Produtos</a>
-          </li>
-          <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Estoque</a>
-              <div class="dropdown-menu" aria-labelledby="dropdown01">
-                  <a class="dropdown-item" href="{% url 'estoque:estoque_entrada_list' %}">Entrada</a>
-                  <a class="dropdown-item" href="#">Saida</a>                    
-              </div>
-          </li>
-      </ul>
-  </div>
-</nav> -->
-
-
-
+    <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="{% url 'core:index' %}">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'cliente:cliente_list' %}">Clientes</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'emprestimo:emprestimo_list' %}">Emprestimos</a>
+            </li>
+            
+            <li class="nav-item dropdown">
+               
+            </li>
+        </ul>
+    </div>
+</nav>
+-->
 
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
-
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
@@ -94,23 +85,19 @@ body {
     display: block;
     text-align: left;
   }
-
-  
 }
 </style>
 </head>
 <body>
 
 <div class="topnav" id="myTopnav">
-    <a href="{% url 'core:index' %}" class="active">ESCTOP</a>
-    <a href="{% url 'cliente:cliente_list' %}">Clientes</a>
-    <a href="{% url 'emprestimo:emprestimo_list' %}">Empréstimos</a> 
-    <a href="{% url 'produto:produto_list' %}">Produtos</a>
-    
-    
-    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-        <i class="fa fa-bars"></i>
-    </a>
+  <a href="{% url 'core:index' %}" class="active">ESCTOP</a>
+  <a href="{% url 'cliente:cliente_list' %}">Clientes</a>
+  <a href="{% url 'emprestimo:emprestimo_list' %}">Empréstimos</a>
+  
+  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+    <i class="fa fa-bars"></i>
+  </a>
 </div>
 
 <div style="padding-left:16px">
@@ -119,12 +106,12 @@ body {
 
 <script>
 function myFunction() {
-    var x = document.getElementById("myTopnav");
-    if(x.className === "topnav") {
-        x.className += " responsive";
-    }else {
-        x.className = "topnav";
-    }
+  var x = document.getElementById("myTopnav");
+  if (x.className === "topnav") {
+    x.className += " responsive";
+  } else {
+    x.className = "topnav";
+  }
 }
 </script>
 
