--- a/projeto/emprestimo/templates/emprestimo_impress.html
+++ b/projeto/emprestimo/templates/emprestimo_impress.html
@@ -212,7 +212,7 @@
 
 			var data_emissao = "{{object.data_emprestimo|date:"d/m/Y"}}"
 
-			var valor_da_parcela = parseFloat("{{object.valor_emprestado}}")		
+			var valor_da_parcela = parseFloat("{{object.valor_prestacao}}")		
 
 			var valor_multa = parseFloat((valor_da_parcela*0.020)).toFixed(2)	
 			
@@ -289,7 +289,7 @@
 							<td width="15%">
 								<span class="title">Valor do Documento</span>
 								<br/>
-								<p class="content center">R$ ${"{{object.valor_emprestado}}"}</p>
+								<p class="content center">R$ ${"{{object.valor_prestacao}}"}</p>
 							</td>
 							<td width="1px"></td>
 							<td width="17%" colspan="5">
@@ -300,7 +300,7 @@
 							<td width="15%">
 								<span class="title">Valor do Documento</span>
 								<br/>
-								<p class="content center">R$ ${"{{object.valor_emprestado}}"}</p>
+								<p class="content center">R$ ${"{{object.valor_prestacao}}"}</p>
 							</td>
 						</tr>
 						<!--4º linha-->
@@ -448,7 +448,7 @@
 							<td width="15%">
 								<span class="title">Valor do Documento</span>
 								<br/>
-								<p class="content center">R$ ${"{{object.valor_emprestado}}"}</p>
+								<p class="content center">R$ ${"{{object.valor_prestacao}}"}</p>
 							</td>
 							<td width="1px"></td>
 							<td width="17%" colspan="5">
@@ -459,7 +459,7 @@
 							<td width="15%">
 								<span class="title">Valor do Documento</span>
 								<br/>
-								<p class="content center">R$ ${"{{object.valor_emprestado}}"}</p>
+								<p class="content center">R$ ${"{{object.valor_prestacao}}"}</p>
 							</td>
 						</tr>
 						<!--4º linha-->
