navtab do cadastro de cliente agora exibe o primeiro item

--- a/projeto/cliente/templates/cliente_form.html
+++ b/projeto/cliente/templates/cliente_form.html
@@ -67,7 +67,7 @@
         <button class="tablinks" onclick="openCity(event, 'Tokyo')">Referências e Observações</button>
     </div>
     
-    <div id="London" class="tabcontent" >
+    <div id="London" class="tabcontent" style="display:block">
         <form method="POST">
         {% csrf_token %}    
         <br>
